add rd/wr ready control

--- a/rtl/regfile/regs.html
+++ b/rtl/regfile/regs.html
@@ -59,5 +59,25 @@
                 <td></td>
             </tr>
         </table>
+        <table>
+            <tr>
+                <td >Offset</td>
+                <td colspan="4">&#39;h4</td>
+            </tr>
+            <tr>
+                <th style="width:80px">Bits</th>
+                <th style="width:150px">Field Name</th>
+                <th style="width:60px">Attr</th>
+                <th style="width:80px">Default</th>
+                <th>Description</th>
+            </tr>
+            <tr>
+                <td>[3, 0]</td>
+                <td>led_b</td>
+                <td>rw</td>
+                <td>0</td>
+                <td></td>
+            </tr>
+        </table>
 </body>
 </html>
